[package]
name = "decode-csq-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
image = "0.25.1"
zune-jpeg = "0.4.11"

[[bin]]
name = "decode-thermal-jpeg-rust"
path = "main.rs"
